; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_symbolic.c_yyBEGIN.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_symbolic.c_yyBEGIN.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@html = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c"<%s>\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @yyBEGIN to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @yyBEGIN(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i64, i64* @html, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @print(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %6)
  br label %8

8:                                                ; preds = %5, %1
  %9 = load i8*, i8** %2, align 8
  ret i8* %9
}

declare dso_local i32 @print(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
